--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #00bfff, #0077b3);
+    background: linear-gradient(to bottom, #00b2b3, #017a69);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,4 +71,8 @@ button:hover {
 
 .hole.active img {
     transform: scale(1.1);
+}
+
+.hole img.clicked {
+    border: 4px solid rgb(255, 71, 99);
 }
